working sorting function

--- a/app/modules/sidebar/hotel-search/hotel-search.component.html
+++ b/app/modules/sidebar/hotel-search/hotel-search.component.html
@@ -1,8 +1,8 @@
 <div class="form-group">
-    <label for="exampleFormControlInput1">Search Hotels</label>
+    <label for="hotel-search-form">Search properties by name</label>
     <input type="text"
            class="form-control"
-           id="exampleFormControlInput1"
+           id="hotel-search-form"
            ng-model="$ctrl.searchTerm"
            ng-change="$ctrl.onInputChange({searchTerm: $ctrl.searchTerm})">
 </div>
