--- a/app/modules/hotels/hotels-component/hotels.component.html
+++ b/app/modules/hotels/hotels-component/hotels.component.html
@@ -1,6 +1,6 @@
 
 <div class="card-columns">
-    <div ng-repeat="hotel in $ctrl.hotels | filter:{ name: $ctrl.searchTerm }">
+    <div ng-repeat="hotel in $ctrl.hotels | filter:{ name: $ctrl.searchTerm } | orderBy:$ctrl.sortValue">
         <hotel-component hotel="hotel"></hotel-component>
     </div>
 </div>
