--- a/app/modules/header/brand-header/brand-header.component.html
+++ b/app/modules/header/brand-header/brand-header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-light bg-light">
+<nav class="kg-navbar navbar sticky-top navbar-light bg-white">
     <a class="navbar-brand" href="#">
         <img src="public/kaligo_logo.png">
     </a>
