--- a/app/app.css
+++ b/app/app.css
@@ -14,6 +14,30 @@
     display: flex;
 }
 
+.kg-navbar{
+    border-bottom: 1px solid #eee;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+}
+
+.kg-sidebar{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    top: 56px;
+    border-right: 1px solid #eee;
+    padding-top: 15px;
+}
+
+.kg-main-view{
+    padding-top: 15px;
+    position: absolute;
+    top: 57px;
+    right: 0;
+}
+
 hotel-trustyou-component{
     background: #dc3545;
     color: white;
@@ -31,6 +55,10 @@ hotel-trustyou-component{
     display: block;
 }
 
-.main-container{
-    margin-top: 20px;
+.kd-sidebar-label{
+    padding: 4px 8px;
+    font-size: 14px;
+    background: #ecf0f1;
+    color: #2c3e50;
+    font-weight: bold;
 }
