--- a/app/modules/hotels/hotels-component/hotels.component.html
+++ b/app/modules/hotels/hotels-component/hotels.component.html
@@ -1,6 +1,12 @@
+<div ng-show="!$ctrl.filteredHotels.length">No hotels to show. :(</div>
 
 <div class="card-columns">
-    <div ng-repeat="hotel in $ctrl.hotels | filter:{ name: $ctrl.searchTerm } | orderBy:$ctrl.sortValue">
+    <div ng-repeat="hotel in $ctrl.filteredHotels = ($ctrl.hotels |
+                    filter:{ name: $ctrl.searchTerm } |
+                    orderBy:$ctrl.sortValue |
+                    trustyou:$ctrl.trustyouFilter |
+                    rating:$ctrl.selectedStars)">
+
         <hotel-component hotel="hotel"></hotel-component>
     </div>
 </div>
