--- a/app/modules/header/brand-header/brand-header.component.html
+++ b/app/modules/header/brand-header/brand-header.component.html
@@ -3,8 +3,8 @@
         <img src="public/kaligo_logo.png">
     </a>
 
-    <button type="button" class="btn btn-sm btn-light">
+    <a class="btn btn-sm btn-light kg-signin-btn" role="button" target="_blank" href="https://www.youtube.com/watch?v=ZJM4AQSbZDk">
         <i class="fa fa-user-circle-o" aria-hidden="true"></i>
         Sign in
-    </button>
+    </a>
 </nav>
